--- a/client/src/Market/Market.css
+++ b/client/src/Market/Market.css
@@ -1,11 +1,11 @@
 .market-item-grid {
   display: grid;
   position: absolute;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   padding: 10px;
   /* margin-top: 800px; */
-  margin-left: 300px;
+  margin-left: 450px;
   margin-bottom: 200px;
 
 }
@@ -55,7 +55,7 @@
   
   display: flex;
   justify-content: center;
-  margin-top: 1550px;
+  margin-top: 2000px;
  
 }
 
@@ -113,13 +113,13 @@
 
 .search-bar{
   
-  margin-top: 1050px;
-  margin-left: 700px;
+  margin-top: 1500px;
+  margin-left: 500px;
   margin-bottom: 20px;
 }
 .search-input{
   /* position: absolute; */
-   width: 500px;
+   width: 800px;
    height: 40px;
    padding-left: 10px;
    border-radius: 1px;
@@ -130,16 +130,19 @@
   background-color: green;
   color: white;
   padding: 10px;
-  width: 50px;
+  width: 40px;
   height: 20px;
   border-radius: 2px;
+  margin-left: 300px;
   
 }
-
+.cart{
+  left: 70px; /* Moves the cart to the left edge */
+}
 .cart-icon {
   position: absolute;
   cursor: pointer;
-  margin-left: 1290px;
+  margin-left: 1350px;
   margin-top: -50px;
 }
 
@@ -153,3 +156,6 @@
   padding: 2px 5px;
   font-size: 12px;
 }
+
+
+
